--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"content="width=device-width, initialscale=1.0"
+        <meta name="viewport"content="width=device-width, initialscale=1.0">
+        <link rel="stylesheet" href="assets\style.css">
         <title>Flashcards</title>
     </head>
     <body> 
@@ -11,16 +12,19 @@
                 <article class="cartao">
                     <div class="cartao_conteudo">
                         <h3>Programação</h3>
-                        <div class="cartao__conteudo__pergunta"> O que é JavaScript?
+                        <div class="cartao__conteudo__pergunta"> 
+                            <p>O que é JavaScript?</p>
                         </div>
-                        <div class="cartao__conteudo__resposta"> O JavaScript é uma linguagem de Programação
+                        <div class="cartao__conteudo__resposta"> 
+                            <p> O JavaScript é uma linguagem de programação</p>
                         </div>
                     </div>
                 </article>
                 <article class=cartao">
                     <div class="cartao__conteudo">
                         <h3>Programação</h3>
-                        <div class="cartao__conteudo__pergunta"> O que é CSS? </div>
+                        <div class="cartao__conteudo__pergunta"> 
+                            <p> O que é CSS?</p> </div>
                     </div class="cartao__conteudo__resposta"> O CSS é uma linguagem de estilização </div>
                 </div>
                 </article>
