--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
                     </div class="cartao__conteudo__resposta"> O CSS é uma linguagem de estilização </div>
                 </div>
                 </article>
+                <article class="cartao">
+                    <div clas="cartao__conteudo">
+                        <div class="cartao__conteudo__pergunta">
+                            <p> O que é CSS?</p>
+                        </div>
+                        <div class="cartao__conteudo__resposta">
+                            <p> O CSS é uma linguagem de estilização</p>
+                        </div>*
+                    </div>
+                </article>
             </section>
         </main>
         <footer> <p>projeto desenvolvido pelo Alura, sem fins lucrativos </p> </footer>
